# ProjectTemplate

./: .gitignore  CMakeLists.txt  DeriveBuild.lua  README.md  build.bat  premake5.lua
core/: CMakeLists.txt  CoreBuild.lua
core/src/: Core.cpp  Core.h
output/Core/Debug/: Core.idb  Core.lib
output/Core/Distribution/: Core.idb  Core.lib
output/Core/Release/: Core.idb  Core.lib
output/GLAD/Debug/: GLAD.idb  GLAD.lib
output/GLFW/Debug/: GLFW.idb  GLFW.lib
resources/: text.txt
src/: main.cpp
